<resources>
    <string name="app_name">PLDroidCameraStreamingDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>

    <string name="hw_codec_camera_streaming_txt">HW Codec Camera Streaming</string>
    <string name="sw_codec_camera_streaming_txt">SW Codec Camera Streaming</string>
    <string name="pure_audio_streaming_txt">Audio Streaming</string>

    <string name="string_state_ready">READY</string>
    <string name="string_state_preparing">PREPARING</string>
    <string name="string_state_connecting">CONNECTING</string>
    <string name="string_state_streaming">STREAMING</string>
    <string name="string_state_netblocking">NETBLOCKING, STOPPING</string>
    <string name="string_state_con_timeout">CONNECTION TIMEOUT</string>
    <string name="title_activity_audio_streaming">AudioStreamingActivity</string>

    <string name="flash_light_on">ON</string>
    <string name="flash_light_off">OFF</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="location">地区</string>
    <string name="school">学校</string>
    <string name="summary">简介</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="Phone_number">Phone number</string>
    <string name="email">email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_verification">Verification Code</string>
    <string name="prompt_confirm">confirm passwd</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">register</string>
    <string name="getCode">getCode</string>
    <string name="chinese_name">脱口派</string>
    <string name="be_good_template">做你最信任的外教预约平台</string>

    <string name="loading">loading...</string>

    <string name="register_allow">To register and to read and to agree to</string>
    <string name="protocol">《Talkpal服务使用协议》</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="modify_password">修改密码</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="login">立即登录</string>
</resources>
