<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/me_bg_gray">

        <com.zhy.autolayout.AutoLinearLayout
            style="@style/bg_while_layout">

            <TextView
                android:id="@+id/tv_modify_pass"
                android:text="@string/modify_password"
                style="@style/setting_item_style"/>

            <View
                style="@style/line_style"/>

            <TextView
                android:id="@+id/tv_feedback"
                android:layout_below="@id/tv_modify_pass"
                android:text="@string/feedback"
                style="@style/setting_item_style"/>

            <View
                style="@style/line_style"/>

            <TextView
                android:id="@+id/tv_about_us"
                android:layout_below="@id/tv_feedback"
                android:text="@string/about_us"
                style="@style/setting_item_style"/>

            <View
                style="@style/line_style"/>

        </com.zhy.autolayout.AutoLinearLayout>

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="退出登录"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="#ff0000"
            android:layout_alignParentBottom="true"
            />

        </com.zhy.autolayout.AutoRelativeLayout>

</layout>